# kali-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  gmp.env.example  post-create.sh  post-start-mcp.sh  post-start.sh  restore-kali-os-release.sh
.github/workflows/: publish-ghcr.yml
binder/: postBuild
kali_mcp/: __init__.py  __main__.py  app.py  config.py  copilot_jupyter.py  copilot_stdio.py  copilot_stdio_lite.py  kali_feature_tools.py  nmap_profiles.py  runtime.py  safety.py  tools_impl.py  validators.py
kali_mcp/data/: __init__.py  kali_tool_catalog.txt
lab/: README.md  docker-compose.yaml
pentest-book/: _config.yml  _toc.yml
pentest-book/content/: copilot_pentest_prompts.ipynb  intro.md
scripts/: codespace-kali-mcp.sh  install-kali-mcp-prereqs.sh  jupyter-book-thebe-serve.sh  lab-down.sh  lab-up.sh  test-mcp-like-anubis.sh  test-mcp-like-kaliyai.sh  test_mcp_jsonrpc.py  vscode-open-pentest-book.sh
