[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kali-mcp"
version = "0.1.0"
description = "MCP (JSON-RPC) HTTP server for Kali Linux desktop and NetHunter: nmap, gvm-cli, wifi scan, and optional chroot exec (Anubis-compatible tools)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.29.0",
]

[project.scripts]
kali-mcp = "kali_mcp.__main__:main"
